# storage/api-docs/api-docs.json
@@ -18,16 +18,13 @@
                 ],
                 "parameters": [
                     {
-                        "name": "Authorization",
-                        "in": "header",
+                        "name": "token",
+                        "in": "query",
                         "description": "Token",
                         "required": true,
                         "type": "string"
                     },
                     {
-                        "name": "Authorization",
-                        "in": "header",
-                        "description": "Token",
                         "name": "customer_id",
                         "in": "formData",
                         "description": "Customer id",
@@ -37,9 +34,6 @@
                     {
                         "name": "workshop_id",
                         "in": "formData",
-                        "description": "Car Id",
-                        "required": false,
-                        "type": "string"
                         "description": "Workshop ID",
                         "required": true,
                         "type": "integer"
@@ -61,9 +55,6 @@
                     {
                         "name": "job_time",
                         "in": "formData",
-                        "description": "Insurance",
-                        "required": false,
-                        "type": "boolean"
                         "description": "Job Time",
                         "required": true,
                         "type": "string"
@@ -81,27 +72,6 @@
                         "in": "formData",
                         "description": "Vehicle Number",
                         "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "type",
-                        "in": "formData",
-                        "description": "Car Type",
-                        "required": false,
-                        "type": "string"
-                    },
-                    {
-                        "name": "make",
-                        "in": "formData",
-                        "description": "Car Make",
-                        "required": false,
-                        "type": "string"
-                    },
-                    {
-                        "name": "model",
-                        "in": "formData",
-                        "description": "Car Model",
-                        "required": false,
                         "type": "string"
                     }
                 ],
@@ -130,8 +100,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "Authorization",
-                        "in": "header",
+                        "name": "token",
+                        "in": "query",
                         "description": "Token",
                         "required": true,
                         "type": "string"
@@ -176,8 +146,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "Authorization",
-                        "in": "header",
+                        "name": "token",
+                        "in": "query",
                         "description": "Token",
                         "required": true,
                         "type": "string"
@@ -328,9 +298,6 @@
                     {
                         "name": "Authorization",
                         "in": "header",
-                        "description": "Auth Token",
-                        "name": "token",
-                        "in": "query",
                         "description": "Token",
                         "required": true,
                         "type": "string"
@@ -358,8 +325,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "token",
-                        "in": "query",
+                        "name": "Authorization",
+                        "in": "header",
                         "description": "Token",
                         "required": true,
                         "type": "string"
@@ -368,7 +335,7 @@
                         "name": "car_id",
                         "in": "formData",
                         "description": "Car Id",
-                        "required": true,
+                        "required": false,
                         "type": "string"
                     },
                     {
@@ -390,13 +357,34 @@
                         "in": "formData",
                         "description": "Insurance",
                         "required": false,
-                        "type": "string"
+                        "type": "boolean"
                     },
                     {
                         "name": "year",
                         "in": "formData",
                         "description": "Year",
                         "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "type",
+                        "in": "formData",
+                        "description": "Car Type",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "make",
+                        "in": "formData",
+                        "description": "Car Make",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "model",
+                        "in": "formData",
+                        "description": "Car Model",
+                        "required": false,
                         "type": "string"
                     }
                 ],
@@ -465,8 +453,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "token",
-                        "in": "query",
+                        "name": "Authorization",
+                        "in": "header",
                         "description": "Token",
                         "required": true,
                         "type": "string"
@@ -587,8 +575,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "token",
-                        "in": "query",
+                        "name": "Authorization",
+                        "in": "header",
                         "description": "Auth Token",
                         "required": true,
                         "type": "string"
@@ -650,8 +638,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "token",
-                        "in": "query",
+                        "name": "Authorization",
+                        "in": "header",
                         "description": "Token",
                         "required": true,
                         "type": "string"
@@ -686,8 +674,8 @@
                 ],
                 "parameters": [
                     {
-                        "name": "token",
-                        "in": "query",
+                        "name": "Authorization",
+                        "in": "header",
                         "description": "Customer's Token",
                         "required": true,
                         "type": "string"
@@ -736,11 +724,196 @@
                 ],
                 "parameters": [
                     {
-                        "name": "token",
-                        "in": "query",
+                        "name": "Authorization",
+                        "in": "header",
                         "description": "Customer's Token",
                         "required": true,
                         "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/customer/add-customer-address": {
+            "post": {
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Add Customer Address",
+                "operationId": "Add Customer Address",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Customer's Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_type",
+                        "in": "formData",
+                        "description": "Customer's Address Type",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_house_no",
+                        "in": "formData",
+                        "description": "Customer's address house no",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_street_no",
+                        "in": "formData",
+                        "description": "Customer's address street no",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_block",
+                        "in": "formData",
+                        "description": "Customer's address block",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_town",
+                        "in": "formData",
+                        "description": "Customer's address town",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address_city",
+                        "in": "formData",
+                        "description": "Customer's address city",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/customer/edit-customer-address": {
+            "put": {
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Edit Customer Address",
+                "operationId": "Edit Customer Address",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Customer's Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "id",
+                        "in": "formData",
+                        "description": "Customer's Address Id To Edit",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "formData",
+                        "description": "Customer's Address Type To Edit",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "house_no",
+                        "in": "formData",
+                        "description": "Customer's Address House No To Edit",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "street_no",
+                        "in": "formData",
+                        "description": "Customer's Address Street No  To Edit",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "block",
+                        "in": "formData",
+                        "description": "Customer's Address Block To Edit",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "town",
+                        "in": "formData",
+                        "description": "Customer's Address Town To Edit",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "city",
+                        "in": "formData",
+                        "description": "Customer's Address City To Edit",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "/api/customer/delete-customer-address": {
+            "delete": {
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Delete Customer Address",
+                "operationId": " Delete Customer Address",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Customer's Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "id",
+                        "in": "formData",
+                        "description": "Customer's Address Id To Delete",
+                        "required": true,
+                        "type": "integer"
                     }
                 ],
                 "responses": {
